2012-05-16  Paul Fitzpatrick  <paul@robotrebuilt.com>

	* src/yarpserver/CMakeLists.txt: fix for Arch Linux build
	[thanks Jean-David Boucher]

	* src/yarpmanager/libymanager/src/localbroker.cpp: likewise

2012-05-16 Lorenzo Natale <lorenzo.natale@iit.it>
        * src/libYARP_dev/src/RemoteControlBoard: now support IEncodersTimed

2012-05-15  Paul Fitzpatrick  <paul@robotrebuilt.com>

	* src/carriers/bayer_carrier/conversions.h: Fix calloc2
	macro on non-windows machines [thanks Carlo Ciliberto]

	* src/libYARP_OS/include/yarp/os/NetInt32.h,
	src/libYARP_OS/include/yarp/os/begin_pack_for_net.h,
	src/libYARP_OS/include/yarp/os/end_pack_for_net.h,
	src/libYARP_OS/src/DgramTwoWayStream.cpp: apply patch from
	Daniele Domenichelli update from using __LINUX__ to __linux__
	[thanks Daniele Domenichelli]

2012-05-15  Andrea Del Prete  <andrea.delprete@iit.it>
    * src\libYARP_math\include\yarp\math\SVD.h
    * src\libYARP_math\src\SVD.cpp 
    * src\libYARP_math\harness\svdTest.cpp
    Add methods for damped pseudo-inverse, range projection matrix, 
    nullspace projection matrix and related tests.

2012-05-14 Lorenzo Natale <lorenzo.natale@iit.it>
        * src/libYARP_dev/src/IEncodersTimedImpl.cpp: small bug 
          mapping between encoders to angles

2012-05-11  Paul Fitzpatrick  <paul@robotrebuilt.com>

	* example/swig/yarp.i: apply patch from Lars to fix Java bindings
	after recent reorganization of control board interfaces
	[thanks Lars Schillingmann]

2012-05-05  Paul Fitzpatrick  <paul@robotrebuilt.com>

	* src/carriers/priority_carrier/PriorityCarrier.cpp: create a 
	stub for a modifying carrier that will choose messages based on
	priority levels. [thanks Ali Paikan] [thanks Lorenzo Natale]

2012-05-04  Paul Fitzpatrick  <paul@robotrebuilt.com>

	* src/carriers/bayer_carrier/CMakeLists.txt: make visual studio 
	accept libdc1394 code, however begrudgingly [thanks Giorgio Metta]

	* src/idls/thrift/CMakeLists.txt: make visual studio accept