@@ -2,16 +2,72 @@
 # Authors: Paul Fitzpatrick
 # CopyPolicy: Released under the terms of the LGPLv2.1 or later, see LGPL.TXT
 
-macro(yarp_idl thrift dir ARGN)
-  get_filename_component(path_trift ${thrift} ABSOLUTE)
-  if (NOT path_thrift) 
-    set(path_thrift ${CMAKE_CURRENT_SOURCE_DIR})
-  endif ()
-  get_filename_component(name_thrift ${thrift} NAME)
-  set(abs_thrift "${path_thrift}/${name_thrift}")
-  message(STATUS "${thrift} : ${abs_thrift}")
-  add_custom_command(OUTPUT ${ARGN}
-    COMMAND ${CMAKE_COMMAND} -E make_directory ${dir}
-    COMMAND yarpidl_thrift -out ${dir} --gen yarp ${abs_thrift}
-    DEPENDS ${thrift})  
+macro(yarp_idl_dir thrift dir)
+  string(REGEX REPLACE "[^a-zA-Z0-9]" "_" name ${thrift})
+  set(${dir} ${CMAKE_CURRENT_BINARY_DIR}/${name})
+endmacro()
+
+macro(yarp_idl thrift)
+  yarp_idl_dir(${thrift} dir)
+  set(INCLUDES)
+  set(DEST_FILES)
+  set(SRC_FILES)
+  set(MISSING FALSE)
+  set(RENAMING FALSE)
+  foreach(arg ${ARGN})
+    if (NOT arg STREQUAL "AS")
+      get_filename_component(abs_name ${arg} ABSOLUTE)
+      if (NOT RENAMING)
+	list(APPEND DEST_FILES ${abs_name})
+	if (NOT EXISTS ${abs_name})
+	  set(MISSING TRUE)
+	endif ()
+      endif ()
+      get_filename_component(ext ${arg} EXT)
+      if (ext STREQUAL ".h")
+	list(APPEND INCLUDES ${arg})
+      endif()
+      set(RENAMING FALSE)
+    else ()
+      set(RENAMING TRUE)
+      list(LENGTH INCLUDES len)
+      math(EXPR len "${len} - 1")
+      list(REMOVE_AT INCLUDES ${len})
+    endif()
+  endforeach()
+  option(ALLOW_IDL_GENERATION "Allow YARP to (re)build IDL files as needed" ${MISSING})
+  if (ALLOW_IDL_GENERATION OR MISSING)
+    set(RENAMING FALSE)
+    foreach(arg ${ARGN})
+      if (NOT arg STREQUAL "AS")
+	get_filename_component(abs_name ${arg} ABSOLUTE)
+	get_filename_component(name ${arg} NAME)
+	if (NOT RENAMING)
+	  list(APPEND SRC_FILES ${name})
+	endif ()
+	set(RENAMING FALSE)
+      else ()
+	set(RENAMING TRUE)
+      endif()
+    endforeach()
+    set(SRC_DIR ${dir})
+    configure_file(${YARP_MODULE_PATH}/template/YarpTweakIDL.cmake.in ${dir}/tweak.cmake @ONLY)
+
+    get_filename_component(path_trift ${thrift} ABSOLUTE)
+    if (NOT path_thrift) 
+      set(path_thrift ${CMAKE_CURRENT_SOURCE_DIR})
+    endif ()
+    get_filename_component(name_thrift ${thrift} NAME)
+    set(abs_thrift "${path_thrift}/${name_thrift}")
+    set(ABS_ARGN)
+    foreach(arg ${SRC_FILES})
+      set(abs_arg "${dir}/${arg}")
+      list(APPEND ABS_ARGN ${abs_arg})
+    endforeach()
+    add_custom_command(OUTPUT ${DEST_FILES}
+      COMMAND ${CMAKE_COMMAND} -E make_directory ${dir}
+      COMMAND yarpidl_thrift -out ${dir} --gen yarp:cmake_supplies_headers ${abs_thrift}
+      COMMAND ${CMAKE_COMMAND} -P ${dir}/tweak.cmake
+      DEPENDS ${thrift})
+  endif()
 endmacro()
